--- a/purescript-interop.cabal
+++ b/purescript-interop.cabal
@@ -23,6 +23,6 @@ library
                        template-haskell >=2.10 && <2.11,
                        aeson >=0.9 && <0.10,
                        bytestring >=0.10 && <0.11,
-                       hashable >=1.2 && <1.3
+                       hashable >=1.2 && <1.3,
   hs-source-dirs:      src
   default-language:    Haskell98
