Newtypes with record constructors

--- a/purescript-interop.cabal
+++ b/purescript-interop.cabal
@@ -17,7 +17,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Purescript.Interop
-  -- other-modules:       
+  other-modules:       Purescript.Interop.Test
   other-extensions:    DeriveDataTypeable, OverloadedStrings, TemplateHaskell
   build-depends:       base >=4.8 && <4.9,
                        template-haskell >=2.10 && <2.11,
